# AES_OpenCL

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
doc/: Doxyfile
kernels/: aes_kernel.cl  aes_kernel_debug.cl
lib/: botan-3.lib
src/: CMakeLists.txt  alice.ui  alicewindow.cpp  alicewindow.h  bob.ui  bobwindow.cpp  bobwindow.h  host.cpp  main.cpp  test.cpp  test_main.cpp  tests.cpp
src/Alice/: alice.ui  alice_main.cpp  alicewindow.cpp  alicewindow.h
src/Bob/: bob.ui  bob_main.cpp  bobwindow.cpp  bobwindow.h
src/utils/: aes_core.cpp  aes_core.h  aes_ctr.cpp  aes_ctr.h  aes_gcm.cpp  aes_gcm.h  aes_host.cpp  aes_host.h  aes_mode.cpp  aes_mode.h  gcm_aes.h  ghash.cpp  ghash.h  key_expansion.cpp  key_expansion.h  safe_allocator.hpp  sbox.h
tests/: CMakeLists.txt  encrypt_test.cpp  gcm_test.cpp  ghash_test.cpp  key_expansion_test.cpp  speed_test.cpp
